# databricks-dlh

./: .gitignore  README.md  databricks.yml  pyproject.toml
resources/: db_dlh.job.yml  db_dlh.pipeline.yml  ingestion.job.yml
src/: ingestion_notebook.ipynb  log_utils.py  silver_layer_transformations.ipynb
src/ddl/analytics/bakehouse_raw/tables/: media_customer_reviews.sql  media_gold_reviews_chunked.sql  sales_customers.sql  sales_franchises.sql  sales_suppliers.sql  sales_transactions.sql
src/ddl/analytics/bronze/tables/: media_customer_reviews.sql  media_gold_reviews_chunked.sql  sales_customers.sql  sales_franchises.sql  sales_suppliers.sql  sales_transactions.sql
src/ddl/analytics/catalog/: analytics.sql
src/ddl/analytics/schemas/: bakehouse_raw.sql  bronze.sql  gold.sql.dbquery.ipynb  silver.sql.dbquery.ipynb
